--- a/README.Rmd
+++ b/README.Rmd
@@ -2,19 +2,26 @@
 title: "Jersey City Demolitions 2018-2022: Part II"
 output: github_document 
 ---
+
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 ```
 
-Sarah Ligon ([@ligonish](https://github.com/ligonish))  
+Sarah Ligon ([\@ligonish](https://github.com/ligonish))\
 November 6, 2022
 
+In the middle of 2022 --- the same year Jersey City reported [demolishing more housing units than any municipality in New Jersey](https://www.nj.gov/dca/divisions/codes/reporter/2021yearly/DEMO_21.pdf) --- the *New York Times* declared it "the [most expensive city in which to rent a home in the United States](https://www.nytimes.com/2022/07/28/realestate/which-city-is-most-expensive-for-renters-you-might-be-surprised.html)".
+
+This second installment in a three-part series, originally written for Lucy Block & Oksana Miranova's "Spatial Analysis & Data Visualization" grad course at NYU, investigates patterns in the housing demolitions Jersey City administrators have approved in the five years since New Jersey began digitizing municipal construction permit records.
+
 Full write-up of this analysis appears in ["Whose House is Jersey City Tearing Down? Part 2 of 3".](https://medium.com/@srligon/whose-house-is-jersey-city-tearing-down-part-ii-3212b1514d6f)
+
+See also [Part 1](https://medium.com/@srligon/whose-house-is-jersey-city-tearing-down-c1092cdbbc43) & [Part 3](https://medium.com/@srligon/whose-house-is-jersey-city-tearing-down-903cdeaa6c6a).
 
 ### Data Sources
 
 -   [NJOIT Open Data Center, NJ Construction Permit Data](https://data.nj.gov/Reference-Data/NJ-Construction-Permit-Data/w9se-dmra)
--   [Rutgers University + NJ Dep't of Community Affairs, N.J. MOD-IV Historical Database](http://modiv.rutgers.edu) See R Project "Codebook_Documentation" folder for detailed variable descriptions.
+-   [Rutgers University + NJ Dep't of Community Affairs, N.J. MOD-IV Historical Database](http://modiv.rutgers.edu) (See "documentation" folder for detailed variable descriptions)
 -   [2018 International Building Code, New Jersey Edition](https://codes.iccsafe.org/content/NJBC2018P2/chapter-3-occupancy-classification-and-use#NJBC2018P2_Ch03_Sec310)
 -   [Zillow Home Value Index (ZHVI) Condo/Co-op Timeseries](https://www.zillow.com/research/data/), by ZIP
 -   [OpenStreetMap](https://www.openstreetmap.org) geolocation via [tidygeocoder](https://cran.r-project.org/web/packages/tidygeocoder/index.html)
@@ -283,7 +290,7 @@ Now that we have tax-assessed dwelling unit counts, we can highlight some signif
 
 #### Plot 1
 
-```{r}
+```{r, fig.width = 9}
 unit_counts %>%
   select(last_pc_year, declared, estimate) %>% 
   pivot_longer(2:3, names_to = "count_type", values_to = "units") %>%
@@ -344,7 +351,7 @@ res_spread <- jc_demos %>%
 
 and then put them into a lollipop chart that is very cool/horrifying at wide resolution, but needs retooling to be visible in smaller formats. Another day! Meanwhile, yes: not only does JC consistently report the most demolitions of any municipality in New Jersey, but it also appears to be tearing down residential-use parcels almost exclusively.
 
-```{r}
+```{r, fig.width = 9}
 res_spread %>%
   mutate(ibcnj_use_desc = fct_reorder(ibcnj_use_desc, demos)) %>% 
   ggplot(aes(x = ibcnj_use_desc, y = demos)) +
@@ -354,8 +361,8 @@ res_spread %>%
   geom_point(size = 4, color = c("dimgrey", "dimgrey", "dimgrey", "dimgrey", "dimgrey", "dimgrey", "#21918c", "#21918c", "#21918c", "dimgrey", "dimgrey", "dimgrey", "dimgrey", "dimgrey", "dimgrey")) +
   labs (x = NULL,
         y = "Total JC-approved parcel demolitions, 2018-2022",
-        title = "How Had People Used the Buildings Jersey City Approved for Demolition in 2018-2022?",
-        subtitle = "Jersey City has the highest building teardown rate in NJ. Most of those buildings used to be housing.",
+        title = "How Had People Been Using the Buildings Jersey City \nApproved for Demolition in 2018-2022?",
+        subtitle = "Jersey City has the highest building teardown rate in NJ. Most were housing.",
         caption = "Source: NJ Construction Permit Data retrieved 11/06/2022 via NJOIT Open Data Center.")+
   coord_flip() +
   geom_text(aes(label = demos), 
@@ -404,7 +411,7 @@ plot_2 <- jc_res_demos %>%
 
 Cumulative unit demolition totals, by ZIP, 2018-2022:
 
-```{r}
+```{r, fig.width = 9}
 plot_2 %>% 
   filter(postcode != "NA",
          postcode != "07310",
@@ -473,7 +480,7 @@ plot_2 %>%
 anim_save("plots/plot_2_annual_animated.gif")
 ```
 
-### Plot 3
+#### Plot 3
 
 Here's a summary-table df setting up total parcels demolished in each ZIP code.
 
@@ -488,7 +495,7 @@ plot_3 <- jc_res_demos %>%
 
 Plot 3
 
-```{r}
+```{r, fig.width = 9}
 plot_3 %>%
   filter(postcode != "NA",
          postcode != "07087") %>% 
@@ -506,7 +513,7 @@ plot_3 %>%
   )+
   labs (x = "ZIP Code",
         y = "Estimated residential units approved for demolition by City of Jersey City, 2018-2022",
-        title = "The Heights Lost the Most Housing Units to City-Approved Demolitions, 2018-2022",
+        title = "The Heights Lost the Most Housing Units to City-Approved Demolitions.",
         subtitle = "Journal Square and the West Side weren't far behind. Waterfront ZIPs lost the fewest units over the last five years.",
         caption = "Source: NJ Construction Permit Data retrieved 11/06/2022 via NJOIT Open Data Center; Jersey City \nproperty tax records retrieved 11/06/2022 via N.J. MOD-IV Historical Database.")+
   coord_flip() +
@@ -519,7 +526,7 @@ So we're at 481 lines of code, and it's time to write this up rather than bringi
 
 To get a sense of whether there's something there, I downloaded Zillow's "typical condo price" estimates by ZIP code and isolated them to Jersey City's. These are problematic data on many levels, but they're something to go on for now.
 
-```{r, message = FALSE}
+```{r}
 # Isolate JC-only ZIP codes, including 07087, which overlaps w/ Union City & thus wasn't included under city name in Zillow set
 
 zillow_jc <- read_csv("data/City_zhvi_uc_condo_tier_0.33_0.67_sm_sa_month.csv") %>% 
@@ -557,7 +564,7 @@ zillow_zips <- zillow_zips %>%
 
 And now we can look at it! Since there are so many lines, I'm using the gghighlight package to keep this from looking like a colorful plate of spaghetti. Interestingly, the non-Waterfront ZIP codes' condo prices are the ones hurtling up the fastest since 2018 (likely because available Waterfront housing stock was bought up and flipped by Australian real estate/superfund megaforce Dixon Advisory c. 2014-15, before demolition records became available in NJ.) Causality could flow either way, here, but the demolition rate and condo price spikes do suggest some sort of correlation.
 
-```{r, message = FALSE}
+```{r, fig.width = 9}
 
 zillow_zips %>%
   filter(zip != "07087") %>%
